--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <zookeeper.version>3.9.2</zookeeper.version>
         <curator.version>5.7.0</curator.version>
         <cglib.version>3.3.0</cglib.version>
+        <httpclient5.version>5.2.1</httpclient5.version>
         <guava.version>33.3.0-jre</guava.version>
         <fastjson2.version>2.0.53</fastjson2.version>
         <slf4j.version>1.7.36</slf4j.version>
@@ -76,6 +77,16 @@
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
             <version>${cglib.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>${httpclient5.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5-fluent</artifactId>
+            <version>${httpclient5.version}</version>
         </dependency>
 
         <!-- util -->
